--- a/port_one/index.html
+++ b/port_one/index.html
@@ -5,6 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <link rel="stylesheet" href="style.css" />
+    <!-- CSS & OTHER STYLING -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+
+
     <title>Port One</title>
   </head>
   <body>
@@ -45,6 +53,9 @@
             </div>
           </div>
 
+          <!-- BREAK -->
+          <div class="break"></div>
+
           <!-- Language -->
           <div class="list-items l-li-3">
             <ul>
@@ -62,6 +73,9 @@
               </li>
             </ul>
           </div>
+
+          <!-- BREAK -->
+          <div class="break"></div>
 
           <!-- Skills -->
           <div class="list-items l-li-4">
@@ -83,7 +97,7 @@
               <li class="skills">
                 <div>
                   <p class="ski">Javascript</p>
-                  <p class="percent">75%</p>
+                  <p class="percent">80%</p>
                 </div>
                 <p class="gap"></p>
               </li>
@@ -111,64 +125,102 @@
             </ul>
           </div>
 
+          <!-- BREAK -->
+          <div class="break"></div>
+
           <!-- Sub Skills -->
           <div class="list-items l-li-5">
-            <div class="list-childs">
-              <p class="other">Word</p>
-              <p class="other">Excel</p>
+            <div class="list-child">
+              <p><i class="fa-solid fa-check"></i></p><p class="other">Bootstrap</p>
             </div>
-            <div class="list-childs">
-              <p class="other">Bootstrap</p>
-              <p class="other">Calendar Management</p>
+            <div class="list-child">
+<p><i class="fa-solid fa-check"></i></p><p class="other">Microsoft Office (Word & Excel)</p>
+            </div>
+            <div class="list-child">
+<p><i class="fa-solid fa-check"></i></p><p class="other">Calendar Management</p>
+            </div>
+            <div class="list-child">
+              <p><i class="fa-solid fa-check"></i></p><p class="other">Tutor</p>
+            </div>
+            <div class="list-child">
+              <p><i class="fa-solid fa-check"></i></p><p class="other">Field Ministry</p>
             </div>
           </div>
+
+          <!-- BREAK -->
+          <div class="break"></div>
+
+          <!-- MY CV -->
+           <div class="my-cv">
+            <a href="#">DOWNLOAD CV <i class="fa-solid fa-download"></i></a>
+           </div>
+
         </div>
+      
 
         <!-- Social Medias & CV -->
         <div class="list-items">
-          <div class="cv"></div>
-          <div class="socials"></div>
-        </div>
-      </div>
-
-      <!--#############
-         MIDDLE
-         #############-->
-      <div class="list middle">
-        <!-- The Head -->
-        <div class="list-items m-li-1">
-          <ul class="head">
+          <ul class="socials">
             <li>
-              <h1 class="name">Discover my Amazing Art Space</h1>
-              <code>
-                <span><</span>code<span>></span>
-                <p>I build</p>
-                <span><</span>/code<span>></span>
-              </code>
+              <a href="#" class="socials-icons"><i class="fa-brands fa-linkedin-in"></i></a>
             </li>
             <li>
-              <img src="mary.jpg" alt="Me" srcset="" class="me" />
+              <a href="#" class="socials-icons"><i class="fa-brands fa-github"></i></a>
+            </li>
+            <li>
+              <a href="#" class="socials-icons"><i class="fa-brands fa-facebook-f"></i></a>
+            </li>
+            <li>
+              <a href="#" class="socials-icons"><i class="fa-solid fa-file"></i></a>
             </li>
           </ul>
+          <div class="cv"></div>
         </div>
-        <!-- My Service -->
-        <div class="list-items"></div>
-        <!-- Price Plans -->
-        <div class="list-items"></div>
-        <!-- Recommendations -->
-        <div class="list-items"></div>
-        <!-- Footer -->
-        <div class="list-items"></div>
       </div>
 
-      <!--#############
+
+        <!--#############
+         MIDDLE
+         #############-->
+        <div class="list middle">
+          <!-- The Head -->
+          <div class="list-items m-li-1">
+            <ul class="head">
+              <li>
+                <h1 class="name">Come and Explore my amazing Journey!</h1>
+                <code>
+                  <p class="code-tag"><</p>code<p class="code-tag">></p>
+                  <p id="code-changes">I build</p>
+                  <p class="code-tag"><</p>/code<p class="code-tag">></p>
+                </code>
+                <a class="hire-me" href="#">Hire Me Now</a>
+              </li>
+              <li>
+                <div class="img-con">
+                  <img src="lastmg3.png" alt="Me" srcset="" class="me" />
+                </div>
+              </li>
+            </ul>
+          </div>
+          <!-- My Service -->
+          <div class="list-items"></div>
+          <!-- Price Plans -->
+          <div class="list-items"></div>
+          <!-- Recommendations -->
+          <div class="list-items"></div>
+          <!-- Footer -->
+          <div class="list-items"></div>
+        </div>
+
+        <!--#############
          RIGHT
          #############-->
-      <div class="list">
-        <!-- The Menu -->
-        <div class="list-items"></div>
-        <!-- Mode -->
-        <div class="list-items"></div>
+        <div class="list">
+          <!-- The Menu -->
+          <div class="list-items"></div>
+          <!-- Mode -->
+          <div class="list-items"></div>
+        </div>
       </div>
     </div>
 
